--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,11 @@ services:
       POSTGRES_USER:  postgres
       POSTGRES_PASSWORD:  123
       POSTGRES_DB:  nest-rest-api
+  test-db:
+    image: postgres:14
+    ports:
+      - 5435:5432
+    environment:
+      POSTGRES_USER:  postgres
+      POSTGRES_PASSWORD:  123
+      POSTGRES_DB:  nest-rest-api
